--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,10 @@
   }
 }
 
+.h1-extrabold {
+  @apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
+}
+
 @layer base {
   * {
     @apply font-inter border-border;
