--- a/src/index.css
+++ b/src/index.css
@@ -55,8 +55,8 @@
   @apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
 }
 
-.h2-extrabold {
-  @apply scroll-m-20 text-2xl font-extrabold tracking-tight lg:text-3xl;
+.h2-bold {
+  @apply scroll-m-20 text-2xl font-bold tracking-tight lg:text-3xl;
 }
 
 @layer base {
