--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,10 @@
 }
 
 .h4 {
+  @apply scroll-m-20 font-light xl:text-base text-sm tracking-tight;
+}
+
+.p {
   @apply scroll-m-20 xl:text-base text-sm tracking-tight;
 }
 
